ISTAKIBI-6952 Android Eğitim ve Öğrenimi + Dependeny injection için gerekli sınıfları yazdım + Filmleri internetten çekmek için gerekli sınıfları yazdım. Test ettim veriler geliyor.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,15 @@
 <resources>
     <string name="app_name">MovieApp</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment">Hello World</string>
+    <string name="movie_list_type_upcoming">Up coming</string>
+    <string name="movie_list_type_popular">Popular</string>
+    <string name="movie_list_type_now_playing">Now Playing</string>
+    <string name="movie_list_type_top_rated">Top Rated</string>
+
+    <string name="home_screen_title">Home</string>
+    <string name="profile_screen_title">Profil</string>
+    <string name="search_screen_title">Search Movie</string>
+
+    <string name="no_data_error_message">No data</string>
 </resources>
